# HubitatAutomationMCP

./: .gitignore  LICENSE.txt  README.md  capability_attributes.json  capability_commands.json  generate_complete_capabilities.py  hubitat.py  hubitat_capabilities.html  main.py  parse_capabilities.py  pyproject.toml  room-management-architecture.md  room_manager.py  util.py
.roo/: mcp.json
hubitat_mcp/: README.md  __init__.py  data_loader.py  server.py
models/: __init__.py  capabilities.py  devices.py  rooms.py
src/hemcp/: capability_attributes.json  capability_commands.json  hubitat.py  room_manager.py  server.py
src/hemcp/models/: devices.py
