[project]
name = "hubitatautomationmcp"
version = "0.1.0"
description = "MCP implementation for Hubitat home hub with support for automation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.9.2",
    "httpx>=0.28.1",
    "pydantic>=2.11.5",
]

[tool.uv]
package = true

[project.scripts]
he-mcp = "hemcp.server:main"
